--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
+
+<head>
+    <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
     <meta name="Keywords" content="">
-    <meta name="description" content=""/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"/>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
     <meta content="black-translucent" name="apple-mobile-web-app-status-bar-style" />
-    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes">
-    <meta content="telephone=no" name="format-detection"/>
+    <meta content="telephone=no" name="format-detection" />
     <meta name="apple-touch-fullscreen" content="yes">
     <meta name="full-screen" content="yes">
-    <meta name="x5-page-mode" content="app"/>
+    <meta name="x5-page-mode" content="app" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>洪少利的主页</title>
+    <title>洪少利的主页, 加载中...</title>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="https://cdn.bootcss.com/material-design-icons/3.0.1/iconfont/material-icons.css">
-  </head>
-  <body>
+</head>
+
+<body>
     <noscript>
       <strong>We're sorry but vue-cli3 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-  </body>
+</body>
+
 </html>
