--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-    <meta name="Keywords" content="">
-    <meta name="description" content="" />
+    <meta name="Keywords" content="洪少利,HongShaoli,洪少利的个人网站，洪少利的博客，洪少利的个人主页">
+    <meta name="description" content="这是洪少利的个人网站，也是个人主页，平时记录一些技术博客文章等等" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
     <meta content="black-translucent" name="apple-mobile-web-app-status-bar-style" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
