--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="https://cdn.bootcss.com/material-design-icons/3.0.1/iconfont/material-icons.css">
     <script>
+      // 百度统计添加
       var _hmt = _hmt || [];
       (function () {
         var hm = document.createElement("script");
@@ -25,6 +26,13 @@
         var s = document.getElementsByTagName("script")[0];
         s.parentNode.insertBefore(hm, s);
       })();
+    </script>
+    <script>
+      // 友盟统计添加
+      const script = document.createElement("script");
+      script.src = "https://s23.cnzz.com/z_stat.php?id=1276871081&web_id=1276871081";
+      script.language = "JavaScript";
+      document.body.appendChild(script);
     </script>
 </head>
 
